--- a/catalog.html
+++ b/catalog.html
@@ -9,19 +9,18 @@
 </head>
 
 <body class="page-body inner-page">
-<div class="page-wrap">
-  <header class="main-header">
 
+<div id="header-wrapper">
+  <header class="main-header">
     <div class="main-header-logo">
       <a href="index.html">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="logotype">
       </a>
     </div>
-
     <div class="main-navigation-wrapper">
       <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="index.html">Студия</a></li>
+        <ul>
+          <li><a href="#about">Студия</a></li>
           <li><a href="#clients">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#contacts">Контакты</a></li>
@@ -29,46 +28,64 @@
       </nav>
     </div>
     <div class="basket-navigation">
-      <img src="img/cart-icon.svg" width="15" height="15" alt="cart-icon">
       <a class="basket-link" href="blank.html">Корзина</a>
     </div>
   </header>
+  <div class="catalog-container">
+    <section class="catalog-title">
+      <h1>Магазин готовых шаблонов</h1>
+    </section>
+  </div>
+</div>
 
-  <main class="inner-page">
+<main>
+  <div class="page-catalog">
+    <aside class="FilterPrice">
 
-    <h1>Магазин готовых шаблонов</h1>
+      <div class="Filters-left">
 
-    <div class="page-catalog">
-      <aside class="FilterPrice">
-
-        <div class="Filters-left">
         <form method="get" action="">
+          <fieldset class="filter-item">
+            <legend>Cтоимость:</legend>
 
-          <fieldset>
-            <legend>Cтоимость</legend>
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar">
+                  </div>
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                </div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">
+                  от <input type="number" name="min-price" value="0">
+                </label>
+                <label class="max-price">
+                  до <input type="number" name="max-price" value="15000">
+                </label>
+              </div>
 
-            <div class="fromBefore">
-              <label for="from">От</label>
-              <input type="text" name="from" id="from">
-              <br />
-              <label for="before">До</label>
-              <input type="text" name="before" id="before">
             </div>
+
           </fieldset>
 
           <fieldset class="FilterGrid">
             <legend>Сетка</legend>
             <ul>
               <li>
-                <input type="radio" name="grid" value="adapt" id="filter-adapt" checked>
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="adapt"
+                       id="filter-adapt" checked>
                 <label for="filter-adapt">Адаптивная</label>
               </li>
               <li>
-                <input type="radio" name="grid" value="fix" id="filter-fix">
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="fix"
+                       id="filter-fix">
                 <label for="filter-fix">Фиксированная</label>
               </li>
               <li>
-                <input type="radio" name="grid" value="rubber" id="filter-rubber">
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="rubber"
+                       id="filter-rubber">
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
@@ -78,41 +95,45 @@
             <legend>Особенности</legend>
             <ul>
               <li>
-                <input type="checkbox" name="slider" id="filter-slider" checked>
-                <label for="filter-adapt">Слайдер</label>
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="slider" id="filter-slider"
+                       checked>
+                <label for="filter-slider">Слайдер</label>
               </li>
               <li>
-                <input type="checkbox" name="advantages" id="filter-advantages">
-                <label for="filter-fix">Блок преимуществ</label>
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="advantages"
+                       id="filter-advantages">
+                <label for="filter-advantages">Блок преимуществ</label>
               </li>
               <li>
-                <input type="checkbox" name="news" id="filter-news" checked>
-                <label for="filter-rubber">Новости</label>
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="news" id="filter-news"
+                       checked>
+                <label for="filter-news">Новости</label>
               </li>
               <li>
-                <input type="checkbox" name="gallery" id="filter-gallery">
-                <label for="filter-rubber">Галерея</label>
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="gallery"
+                       id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
               </li>
               <li>
-                <input type="checkbox" name="basket" id="filter-basket">
-                <label for="filter-rubber">Корзина</label>
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="basket" id="filter-basket">
+                <label for="filter-basket">Корзина</label>
               </li>
             </ul>
           </fieldset>
           <button class="buttonSubmit" type="submit">Показать</button>
         </form>
-        </div>
-      </aside>
+      </div>
+    </aside>
 
-      <div class="content-right">
+    <div class="content-right">
       <section class="filterSort">
         <h3>Сортировать</h3>
         <ul>
           <li>
-            <a href="#">По цене</a>
+            <a class="a-current" href="#">По цене</a>
           </li>
           <li>
-            <a href="#"> По типу </a>
+            <a class="opacity" href="#"> По типу </a>
           </li>
           <li>
             <a href="#">По названию</a>
@@ -128,184 +149,192 @@
       </section>
 
       <div class="templates-columns">
-          <ul>
-            <li>
-              <a href="#">
+        <ul>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-sedona 1.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
                 <h3>Sedona</h3>
                 <p>
-                  <img src="img/img-sedona 1.png" width="359" height="578" alt="Шаблон Седона">
+                  Информационный сайт <br>
+                  для туристов
                 </p>
-              </a>
-              <p>
-                Информационный сайт <br>
-                для туристов
-              </p>
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-            <li>
-              <a href="product.html">
-                <h3>Pink app</h3>
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-pink%201.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
+                <h3>Pink App</h3>
                 <p>
-                  <img src="img/img-pink 1.png" width="359" height="578" alt="Шаблон Пинк ап">
+                  Продуктовый лендинг <br> приложения для iOS и Android
                 </p>
-              </a>
-              <p>
-                Продуктовый лендинг <br>
-                приложения для iOS и Android
-              </p>
-
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-            <li>
-              <a href="product.html">
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-barbershop%201.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
                 <h3>Barbershop</h3>
                 <p>
-                  <img src="img/img-barbershop 1.png" width="359" height="578" alt="Шаблон Барбер шоп">
+                  Сайт салона красоты.<br>Для мужчин, да.
                 </p>
-              </a>
-              <p>
-                Сайт салона красоты.<br>
-                Для мужчин, да.
-              </p>
-
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-            <li>
-              <a href="product.html">
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-mishka%201.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
                 <h3>MISHKA</h3>
                 <p>
-                  <img src="img/img-mishka 1.png" width="359" height="578" alt="Шаблон Мишка">
+                  Интернет-магазин <br> вязаных игрушек
                 </p>
-              </a>
-              <p>
-                Интернет-магазин <br>
-                вязаных игрушек
-              </p>
-
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-
-            <li>
-              <a href="product.html">
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-aplus%201.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
                 <h3>A Plus</h3>
                 <p>
-                  <img src="img/img-aplus 1.png" width="359" height="578" alt="Шаблон Аплус">
+                  Лендинг курсов повышения <br>квалификации
                 </p>
-              </a>
-              <p>
-                Лендинг курсов повышения <br>
-                квалификации
-              </p>
-
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-            <li>
-              <a href="product.html">
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="templates-content">
+              <div class="browser-image">
+                <img src="img/browser.png">
+              </div>
+              <div class="templates-image">
+                <img src="img/img-kvast%201.png" width="359" height="578" alt="Шаблон Седона">
+              </div>
+              <div class="templates-text">
                 <h3>КВАСТ</h3>
                 <p>
-                  <img src="img/img-kvast 1.png" width="359" height="578" alt="Шаблон Кваст">
+                  Промо-сайт производителя <br> крафтового кваса
                 </p>
-              </a>
-              <p>
-                Промо-сайт производителя<br>
-                крафтового кваса
-              </p>
+                <button type="button">
+                  <div class="textButton">9 900 р</div>
+                </button>
+              </div>
+            </div>
+          </li>
 
-              <button type="button">
-                <div class="textButton">9 900 руб</div>
-              </button>
-
-            </li>
-          </ul>
-
-          </div>
-
-          <br />
-          <section>
-          <ul class="pagination-list">
-            <li class="pagination-item">
-              <a href="">1</a>
-            </li>
-            <li class="pagination-item">
-              <a href="#">2</a>
-            </li>
-            <li class="pagination-item">
-              <a href="#">3</a>
-            </li>
-            <li class="pagination-item">
-              <a href="#">Следующая</a>
-            </li>
-          </ul>
-        </section>
-        </div>
-
+        </ul>
+      </div>
+      <br/>
+      <section>
+        <ul class="pagination-list ">
+          <li class="pagination-item pagination-current">
+            <a href="">1</a>
+          </li>
+          <li class="pagination-item">
+            <a href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a href="#">Следующая</a>
+          </li>
+        </ul>
+      </section>
     </div>
-    <section class="contacts-box" id="contacts">
+  </div>
+
+  <div class="contacts">
+    <section class="contacts-box page-wrap">
       <h6>NЁRDS DESIGN STUDIO</h6>
       <p>наб. Реки Карповки,<br>
         5 лит П, Санкт-Петербург<br>
         <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
       </p>
       <button class="button-red" type="button">Напишите нам</button>
-
     </section>
-  </main>
+  </div>
 
-  <footer class="footer">
+</main>
 
-    <section class="main-footer">
-      <ul class="footer-social">
-        <li>
-          <div class="iconSocial circleBase">
-            <a href="#">
-              <img src="img/vk-icon.svg" width="26" height="15">
-            </a>
-          </div>
-        </li>
-        <li>
-          <div class="iconSocial circleBase">
-            <a href="#">
-              <img src="img/fb-icon.svg" width="12" height="22">
-            </a>
-          </div>
-        </li>
-        <li>
-          <div class="iconSocial circleBase">
-            <a href="#">
-              <img src="img/insta-icon.svg" width="21" height="21">
-            </a>
-          </div>
-        </li>
-      </ul>
-    </section>
-    <section class="footer-goodbye">
-      <h6>Давайте дружить, это выгодно!</h6>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
-
-    </section>
-
-  </footer>
-
-
-
-
-    </form>
+<footer class="footer page-wrap">
+  <section class="main-footer">
+    <ul class="footer-social">
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/vk-icon.svg" width="26" height="15">
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/fb-icon.svg" width="12" height="22">
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="iconSocial circleBase">
+          <a href="#">
+            <img src="img/insta-icon.svg" width="21" height="21">
+          </a>
+        </div>
+      </li>
+    </ul>
   </section>
+  <section class="footer-goodbye">
+    <h6>Давайте дружить, это выгодно!</h6>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+
+  </section>
+</footer>
+
+</section>
 </div>
 </body>
 </html>
